--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,12 @@
             color: rgba(255, 0, 0, 0.1); /* Light red number */
         }
     </style>
+    <link href="https://example.com/path-to-kalnia-font.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="background">
